<resources>
    <string name="app_name">SafeValetCaptain</string>
    <string name="white_rounded_rectangle" />
    <string name="scan_qr_code"> Scan QR Code </string>
    <string name="driverInActive"> You are off work Now If You Want To Start Set App In ON Mode </string>

    <string name="available_orders">Available Orders</string>
    <string name="kia_sportage_2022" translatable="false">kia_sportage_2022</string>
    <string name="_35_98634" translatable="false">35_98634</string>
    <string name="car_no">Car No.</string>
    <string name="key_no">Key No.</string>
    <string name="_2">2</string>
    <string name="take_order">Take Order</string>
    <string name="show_my_qr">Show My Qr</string>
    <string name="call_back_my_car">Call Back My Car</string>
    <string name="trip_in_progress">Trip in Progress</string>
    <string name="trip_as_completed">trip as completed</string>
    <string name="time">time</string>
    <string name="completed">completed</string>
    <string name="Date">Data</string>
    <string name="on_the_move">On the move</string>
    <string name="_3_min">3 min</string>
    <string name="take_check_in_photo">Take Check-in Photo</string>
    <string name="pick_up_the_car">Pick up the Car</string>
    <string name="directions">Directions</string>
    <string name="start_driving">Start Driving</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="safe_valet">Safe Valet</string>
    <string name="history">History</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="my_car_35_98634">my_car_35_98634</string>
    <string name="swefieh_village">swefieh_village</string>
    <string name="ahmad_zuhair" />
    <string name="_12_45_pm">12:45 PM</string>
    <string name="parking">Parking</string>
    <string name="mercedes_s_class_2022">Mercedes s class 2022</string>
    <string name="client_name_ahmed">Client Name : Ahmed</string>
    <string name="pick_up">Pick Up</string>
    <string name="_01_45_pm">01:45 PM</string>
    <string name="_14_10_2022">14 - 10 - 2022</string>
    <string name="choose_the_station">Choose the station</string>
    <string name="station_name">Station Name</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="description">description</string>
    <string name="login">Login</string>
    <string name="_962">962</string>
    <string name="History">History</string>
    <string name="Lang">Language</string>
    <string name="CompleteTrip">Complete The Trip</string>
    <string name="Cardelivery">Car Delivery</string>
    <string name="Notfication">Notfication</string>
    <string name="tskeOrder">Take Order</string>
    <string name="home">Home</string>
    <string name="when_you_stop_working_you_will_not_receive_work_notifications">When you stop working, you will not receive work notifications</string>
    <string name="done" >Done</string>
    <string name="cancel" >Cancel</string>
    <string name="offWork" >You Are Stope Working</string>
    <string name="resend_code">resend code</string>
    <string name="enter_code">enter code</string>
    <string name="code_verification_header">code verification header</string>
    <string name="check">check</string>
    <string name="resend_code_30">Resend code after (%s)</string>
    <string name="not_receive_code">not receive code</string>
    <string name="loading">loading</string>
    <string name="verification_required">verification required</string>
    <string name="error_occurred">error occurred</string>
    <string name="correct_otp_required">correct otp required </string>
    <string name="hello">Hello, </string>
    <string name="location_description">Location Description</string>
    <string name="key_number">Key Number</string>>
    <string name="valdateKey">Please Add  Key Number</string>
    <string name="send_notficatio_i_am_close">send Notification I am Close</string>
    <string name="line_app_car">Line up Car</string>
    <string name="press_the_button_below_when_delivering_the_car_to_the_customer">Press the button below when delivering the car to the customer</string>
    <string name="the_car_will_parked">The car will parked</string>
    <string name="tottalTime">Tottal Time : (%s)</string>
    <string name="send_notficatio_i_am_here_1">send Notification I am Here (%s)</string>
    <string name="send_notficatio_i_am_here">send Notification I am Here</string>
    <string name="back_car_to_the_park">back Car to the Park</string>

</resources>