<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout


    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="bottom"
    android:gravity="bottom"
    android:background="#B2F2F2F2"
    android:id="@+id/dismis_view"
    android:layout_height="match_parent">

    <soup.neumorphism.NeumorphCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/white"
android:background="@color/white"
        app:cardCornerRadius="30dp"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            >

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:padding="8dp"
                android:src="@drawable/silenta" />

            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/when_you_stop_working_you_will_not_receive_work_notifications"
android:layout_marginTop="21dp"
            android:textColor="@color/black"
            android:layout_marginBottom="22dp"
            android:textSize="23sp" />

<View
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="#9E9E9E"
    />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:weightSum="2"
                android:layout_marginTop="22dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/done"
                    android:layout_weight="1.0"
android:id="@+id/doneeBtn"
                    android:textColor="#3E8B71"
                    android:textSize="23dp" />
                <TextView
                    android:id="@+id/cancelBtn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:layout_weight="1.0"

                    android:textColor="@color/black"
                    android:textSize="23dp" />
            </LinearLayout>
        </LinearLayout>

    </soup.neumorphism.NeumorphCardView>

</androidx.constraintlayout.widget.ConstraintLayout>