<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PickingCarFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/toolbar_include"
        layout="@layout/customemenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/carImg"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="92dp"
        android:layout_marginBottom="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/car3"
        app:layout_constraintBottom_toTopOf="@+id/deltaRelative"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar_include"
        app:layout_constraintVertical_bias="1.0"

        />

    <TextView
        android:id="@+id/tripInProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pick_up_the_car"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/deltaRelative"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/carImg" />


    <RelativeLayout
        android:id="@+id/deltaRelative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:layout_marginTop="270dp"
        android:background="@drawable/custom_shape"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:orientation="vertical"
        android:contentDescription="TODO" >

    </RelativeLayout>


    <ImageView
        android:id="@+id/customShape"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:background="@drawable/pickrectangle"
        android:contentDescription="@string/white_rounded_rectangle"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="@+id/deltaRelative"
        app:layout_constraintTop_toBottomOf="@+id/CallMyCar"
        android:layout_marginTop="60dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/customShape"
        android:layout_marginTop="375dp"

        >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/carModel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/car_no"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15sp" />


            <TextView
                android:id="@+id/whiteMyCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:gravity="center"
                android:text="-"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="12sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/key_no"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/keyNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="-"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textSize="12sp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="15dp"
                android:layout_height="25dp"
                android:background="@drawable/placeholder2" />

            <TextView
                android:id="@+id/direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/directions"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>




    <com.google.android.material.card.MaterialCardView
        android:layout_width="110dp"
        android:layout_height="110dp"
        app:cardBackgroundColor="@color/gray"
        android:id="@+id/driveBtn"
app:cardCornerRadius="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/customShape"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"

            >

        <ImageView
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:src="@drawable/bluecar"
            />
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/start_driving"
    android:textAlignment="center"
    android:textColor="@color/blue"
    android:textSize="14sp"
    android:textStyle="bold"


    />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>








